--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ mathjax: true
 
 # Open link in a new tab | 是否在新窗口打开链接
 open_in_new:
-  article: true  # 文章链接
+  article: false  # 文章链接
   menu: false   # 导航菜单
   subNav: false  # 子菜单
 
